# dev_team_crew

./: .gitignore  README.md  architecture_design.md  backend_implementation.md  frontend_implementation.md  pyproject.toml
src/dev_team_crew/: crew.py  main.py
src/dev_team_crew/config/: agents.yaml  tasks.yaml
