[project]
name = "dev_team_crew"
version = "0.1.0"
description = "dev-team-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
dev_team_crew = "dev_team_crew.main:run"
run_crew = "dev_team_crew.main:run"
train = "dev_team_crew.main:train"
replay = "dev_team_crew.main:replay"
test = "dev_team_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
